# targets-coffee-code

./: .gitignore  README.html  README.md  _environment  _quarto.yml  _targets.yaml  code_pipeline.html  intro-targets.qmd  pyproject.toml
_freeze/intro-targets/execute-results/: html.json
_images/: complete_code_dependency_graph.html  incomplete_code_dependency_graph.html
src/: _targets_analysis.R  analysis.R  targets_ofsted_walkthrough.qmd
src/R/: functions.R
src/data_analysis_gph/: launch-code.dot  launch-code.py
www/: custom-styles.css  quarto-presentation.scss
